--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -5,6 +5,10 @@ on:
     branches: [ "main" ]
   pull_request:
     branches: [ "main" ]
+    
+env:
+  FIREZONE_VERSION: 0.5.7
+  REGISTRY: ghcr.io
 
 jobs:
 
@@ -16,5 +20,18 @@ jobs:
     - uses: actions/checkout@v3
       with: 
         repository: firezone/firezone
-    - name: Build the Docker image
-      run: docker build . --file Dockerfile.prod --tag ghcr.io/telkomindonesia/firezone:$(date +%s)
+        ref: ${{ env.FIREZONE_VERSION }}
+    
+    - name: Log in to the Container registry
+      uses: docker/login-action@f054a8b539a109f9f41c372932f1ae047eff08c9
+      with:
+        registry: ${{ env.REGISTRY }}
+        username: ${{ github.actor }}
+        password: ${{ secrets.GITHUB_TOKEN }}
+
+    - name: Build and push Docker image
+      uses: docker/build-push-action@ad44023a93711e3deb337508980b4b5e9bcdc5dc
+      with:
+        context: .
+        push: true
+        tags: ${{ env.REGISTRY }}/telkomindonesia/firezone:${{ env.FIREZONE_VERSION }}
