--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -33,5 +33,6 @@ jobs:
       uses: docker/build-push-action@ad44023a93711e3deb337508980b4b5e9bcdc5dc
       with:
         context: .
+        file: Dockerfile.prod
         push: true
         tags: ${{ env.REGISTRY }}/telkomindonesia/firezone:${{ env.FIREZONE_VERSION }}
