--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -35,4 +35,4 @@ jobs:
         context: .
         file: Dockerfile.prod
         push: true
-        tags: ${{ env.REGISTRY }}/telkomindonesia/firezone:${{ env.FIREZONE_VERSION }}
+        tags: ${{ env.REGISTRY }}/${{ github.repository_owner }}/firezone:${{ env.FIREZONE_VERSION }}
