--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -28,6 +28,11 @@ jobs:
         registry: ${{ env.REGISTRY }}
         username: ${{ github.actor }}
         password: ${{ secrets.GITHUB_TOKEN }}
+        
+    - id: repo_owner
+      uses: ASzc/change-string-case-action@v2
+      with:
+        string: ${{ github.repository_owner }}
 
     - name: Build and push Docker image
       uses: docker/build-push-action@ad44023a93711e3deb337508980b4b5e9bcdc5dc
@@ -35,4 +40,4 @@ jobs:
         context: .
         file: Dockerfile.prod
         push: true
-        tags: ${{ env.REGISTRY }}/${{ github.repository_owner }}/firezone:${{ env.FIREZONE_VERSION }}
+        tags: ${{ env.REGISTRY }}/${{ steps.repo_owner.outputs.lowercase }}/firezone:${{ env.FIREZONE_VERSION }}
